# deepl-translator

./: .gitignore  main.py  pyproject.toml  vocabular_scrapper.py
Flashcards/wordcyclopedia/: flashcards.txt  words_en.json
