[tool.poetry]
name = "wordreference-translator"
version = "0.1.0"
description = ""
authors = ["Arthur2479 <arthurjacobs1004@gmail.com>"]
readme = "README.md"
packages = [{include = "wordreference_translator"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
